# delta-wrapper

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: onPush.yaml
deltawrapper/: _types.py  spark_utils.py  types.py  utils.py
pyrenamer/: main.py
test_data/: config.yaml
tests/: test_rename.py
